--- a/ui/setup.html
+++ b/ui/setup.html
@@ -614,13 +614,18 @@
       <div class="optional-section">
         <div class="optional-header" onclick="toggleOptional()">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg>
-          <h4>bonus: add OpenAI for smart search</h4>
+          <h4>bonus: add more AI providers</h4>
         </div>
         <div class="optional-content" id="optional-openai-oauth">
           <div class="form-group">
             <label>OpenAI API Key</label>
             <input type="password" id="openai-key-oauth" placeholder="sk-...">
             <p class="hint">Enables semantic memory search. Get from <a href="https://platform.openai.com/api-keys" target="_blank">platform.openai.com</a></p>
+          </div>
+          <div class="form-group">
+            <label>Kimi (Moonshot) API Key</label>
+            <input type="password" id="kimi-key-oauth" placeholder="sk-...">
+            <p class="hint">Alternative AI provider. Get from <a href="https://platform.moonshot.ai/" target="_blank">platform.moonshot.ai</a></p>
           </div>
         </div>
       </div>
@@ -647,13 +652,18 @@
       <div class="optional-section">
         <div class="optional-header" onclick="toggleOptional()">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"/></svg>
-          <h4>bonus: add OpenAI for smart search</h4>
+          <h4>bonus: add more AI providers</h4>
         </div>
         <div class="optional-content" id="optional-openai-api">
           <div class="form-group">
             <label>OpenAI API Key</label>
             <input type="password" id="openai-key-api" placeholder="sk-...">
             <p class="hint">Enables semantic memory search. Get from <a href="https://platform.openai.com/api-keys" target="_blank">platform.openai.com</a></p>
+          </div>
+          <div class="form-group">
+            <label>Kimi (Moonshot) API Key</label>
+            <input type="password" id="kimi-key-api" placeholder="sk-...">
+            <p class="hint">Alternative AI provider. Get from <a href="https://platform.moonshot.ai/" target="_blank">platform.moonshot.ai</a></p>
           </div>
         </div>
       </div>
@@ -827,6 +837,12 @@
             await window.pocketAgent.setSetting('openai.apiKey', openaiKey);
           }
 
+          // Save Kimi key if provided
+          const kimiKey = document.getElementById('kimi-key-oauth').value.trim();
+          if (kimiKey) {
+            await window.pocketAgent.setSetting('moonshot.apiKey', kimiKey);
+          }
+
           showStep('step-success');
         } else {
           statusDiv.innerHTML = `
@@ -937,6 +953,12 @@
 
         if (openaiKey) {
           await window.pocketAgent.setSetting('openai.apiKey', openaiKey);
+        }
+
+        // Save Kimi key if provided
+        const kimiKey = document.getElementById('kimi-key-api').value.trim();
+        if (kimiKey) {
+          await window.pocketAgent.setSetting('moonshot.apiKey', kimiKey);
         }
 
         showStep('step-success');
